--- a/src/app/edit/postagem-edit/postagem-edit.component.html
+++ b/src/app/edit/postagem-edit/postagem-edit.component.html
@@ -1,28 +1,41 @@
-
-<div class="container" mt-5 mb-5>
+<div class="container mt-5 mb-5">
 
   <div class="row">
-  <div class="col-md-12">
-    <h1 class="text-center text-secondary">Atualizar Tema</h1>
+    <div class="col-md-12">
+      <h1 class="text-center text-secondary">Atualizar Postagem</h1>
+    </div>
   </div>
-  </div>
+
 
   <div class="row d-flex justify-content-center">
     <div class="col-md-6">
 
       <div class="form-group">
-
-        <label for="descricao">Titulo</label>
-        <input type="text" class="form-control" id="descricao" [(ngModel)]='postagem.
-        titulo'>
-
+        <label for="titulo">Título</label>
+        <input [(ngModel)]='postagem.titulo' type="text" class="form-control" id="titulo" placeholder="Digite o título">
       </div>
 
       <div class="form-group">
-        <label for="descricao">Descrição</label>
-        <input type="text" class="form-control" id="descricao" [(ngModel)]='postagem.
-        descricao'>
+        <label for="texto">Texto</label>
+        <textarea [(ngModel)]='postagem.descricao' class="form-control" name="texto" id="texto" cols="" rows="3"></textarea>
       </div>
+
+
+      <div class="form-group">
+        <label for="tema">Escolha um tema</label>
+        <select class="form-control" name="tema" id="tema" [(ngModel)]='idTema' (change)='findByIdTema'>
+          <option *ngFor='let item of listaTemas' value="{{item.id}}">{{item.descricao}}</option>
+        </select>
+      </div>
+
+      <div class="d-flex justify-content-center">
+
+        <button type="button" class="btn btn-danger mr-4" routerLink='/inicio' >Cancelar</button>
+        <button type="button" class="btn btn-success"(click)='atualizar()'>Publicar</button>
+
+      </div>
+
+
     </div>
   </div>
 </div>
